<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mar"
    tools:context=".addActivity">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/title2"
        android:textColor="#51F719"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombrecolor"
        android:layout_width="317dp"
        android:layout_height="62dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/title3"
        android:inputType="textPersonName"
        android:textColor="#07F11E"
        android:textColorHighlight="#0033F522"
        android:textColorHint="#517249"
        android:textColorLink="#13FA13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <Button
        android:id="@+id/add"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="agrega"
        android:text="@string/add"
        android:textColor="#51F719"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombrecolor" />

    <Button
        android:id="@+id/btnmostrar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="214dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:onClick="Mostrarscreen"
        android:text="@string/mostrarc"
        android:textColor="#51F719"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/btnmostrar2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="244dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:onClick="menuprincipal"
        android:text="@string/menu"
        android:textColor="#51F719"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmostrar" />
</androidx.constraintlayout.widget.ConstraintLayout>